tests/ui/extern/extern-macro.stderr
error[E0433]: cannot find `bar` in `Foo`
  --> $DIR/extern-macro.rs:5:13
   |
LL |     let _ = Foo::bar!();
   |             ^^^^^^^^ partially resolved path in a macro

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
